// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route resolution do not resolve route custom block if inlineRouteBlock is false 1`] = `
Array [
  Object {
    "chunkName": "route",
    "component": "@/pages/route.vue",
    "name": "route",
    "path": "/route",
    "pathSegments": Array [
      "route",
    ],
    "route": Object {
      "index": 0,
      "lang": "json",
    },
    "specifier": "route",
  },
]
`;

exports[`Route resolution prioritizes index than dynamic route 1`] = `
Array [
  Object {
    "chunkName": "users-index",
    "component": "@/pages/users/index.vue",
    "name": "users",
    "path": "/users",
    "pathSegments": Array [
      "users",
    ],
    "specifier": "users_index",
  },
  Object {
    "chunkName": "users-foo",
    "component": "@/pages/users/foo.vue",
    "name": "users-foo",
    "path": "/users/foo",
    "pathSegments": Array [
      "users",
      "foo",
    ],
    "specifier": "users_foo",
  },
  Object {
    "chunkName": "users-id",
    "component": "@/pages/users/_id.vue",
    "name": "users-id",
    "path": "/users/:id?",
    "pathSegments": Array [
      "users",
      ":id?",
    ],
    "specifier": "users__id",
  },
]
`;

exports[`Route resolution resolve route custom block 1`] = `
Array [
  Object {
    "chunkName": "route",
    "component": "@/pages/route.vue",
    "name": "route",
    "path": "/route",
    "pathSegments": Array [
      "route",
    ],
    "route": Object {
      "content": Object {
        "meta": Object {
          "title": "Hello",
        },
        "name": "Test",
      },
      "index": 0,
      "lang": "json",
    },
    "specifier": "route",
  },
]
`;

exports[`Route resolution resolve route meta 1`] = `
Array [
  Object {
    "chunkName": "meta",
    "component": "@/pages/meta.vue",
    "name": "meta",
    "path": "/meta",
    "pathSegments": Array [
      "meta",
    ],
    "routeMeta": Object {
      "title": "Hello",
    },
    "specifier": "meta",
  },
]
`;

exports[`Route resolution resolves as nested routes 1`] = `
Array [
  Object {
    "chunkName": "index",
    "component": "@/pages/index.vue",
    "name": "index",
    "path": "",
    "pathSegments": Array [],
    "specifier": "index",
  },
  Object {
    "chunkName": "foo",
    "component": "@/pages/foo.vue",
    "name": "foo",
    "path": "foo",
    "pathSegments": Array [
      "foo",
    ],
    "specifier": "foo",
  },
]
`;

exports[`Route resolution resolves dynamic nested routes 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "chunkName": "users-test",
        "component": "@/pages/users/test.vue",
        "name": "users-test",
        "path": "test",
        "pathSegments": Array [
          "users",
          "test",
        ],
        "specifier": "users_test",
      },
      Object {
        "children": Array [
          Object {
            "chunkName": "users-id-foo",
            "component": "@/pages/users/_id/foo.vue",
            "name": "users-id-foo",
            "path": "foo",
            "pathSegments": Array [
              "users",
              ":id",
              "foo",
            ],
            "specifier": "users__id_foo",
          },
        ],
        "chunkName": "users-id",
        "component": "@/pages/users/_id.vue",
        "name": "users-id",
        "path": ":id?",
        "pathSegments": Array [
          "users",
          ":id?",
        ],
        "specifier": "users__id",
      },
    ],
    "chunkName": "users",
    "component": "@/pages/users.vue",
    "name": "users",
    "path": "/users",
    "pathSegments": Array [
      "users",
    ],
    "specifier": "users",
  },
]
`;

exports[`Route resolution resolves dynamic routes 1`] = `
Array [
  Object {
    "chunkName": "users-id",
    "component": "@/pages/users/_id.vue",
    "name": "users-id",
    "path": "/users/:id?",
    "pathSegments": Array [
      "users",
      ":id?",
    ],
    "specifier": "users__id",
  },
]
`;

exports[`Route resolution resolves dynamic routes with multiple "." 1`] = `
Array [
  Object {
    "chunkName": "user.register",
    "component": "@/pages/user.register.vue",
    "name": "user.register",
    "path": "/user.register",
    "pathSegments": Array [
      "user.register",
    ],
    "specifier": "user_register",
  },
]
`;

exports[`Route resolution resolves dynamic routes with required param 1`] = `
Array [
  Object {
    "chunkName": "users-id-index",
    "component": "@/pages/users/_id/index.vue",
    "name": "users-id",
    "path": "/users/:id",
    "pathSegments": Array [
      "users",
      ":id",
    ],
    "specifier": "users__id_index",
  },
]
`;

exports[`Route resolution resolves nested route including index 1`] = `
Array [
  Object {
    "chunkName": "a-index-b-index-c",
    "component": "@/pages/a/index/b/index/c.vue",
    "name": "a-b-c",
    "path": "/a/b/c",
    "pathSegments": Array [
      "a",
      "b",
      "c",
    ],
    "specifier": "a_index_b_index_c",
  },
]
`;

exports[`Route resolution resolves nested route including index with corresponding index.vue 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "chunkName": "a-index-b-index-c",
            "component": "@/pages/a/index/b/index/c.vue",
            "name": "a-b-c",
            "path": "c",
            "pathSegments": Array [
              "a",
              "b",
              "c",
            ],
            "specifier": "a_index_b_index_c",
          },
        ],
        "chunkName": "a-index-b-index",
        "component": "@/pages/a/index/b/index.vue",
        "name": "a-b",
        "path": "b",
        "pathSegments": Array [
          "a",
          "b",
        ],
        "specifier": "a_index_b_index",
      },
    ],
    "chunkName": "a-index",
    "component": "@/pages/a/index.vue",
    "name": "a",
    "path": "/a",
    "pathSegments": Array [
      "a",
    ],
    "specifier": "a_index",
  },
]
`;

exports[`Route resolution resolves nested routes 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "chunkName": "foo-index",
        "component": "@/pages/foo/index.vue",
        "name": "foo",
        "path": "",
        "pathSegments": Array [
          "foo",
        ],
        "specifier": "foo_index",
      },
      Object {
        "chunkName": "foo-bar",
        "component": "@/pages/foo/bar.vue",
        "name": "foo-bar",
        "path": "bar",
        "pathSegments": Array [
          "foo",
          "bar",
        ],
        "specifier": "foo_bar",
      },
    ],
    "chunkName": "foo",
    "component": "@/pages/foo.vue",
    "name": "foo",
    "path": "/foo",
    "pathSegments": Array [
      "foo",
    ],
    "specifier": "foo",
  },
]
`;

exports[`Route resolution resolves number prefixed route 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "chunkName": "1test-2nested",
        "component": "@/pages/1test/2nested.vue",
        "name": "1test-2nested",
        "path": "2nested",
        "pathSegments": Array [
          "1test",
          "2nested",
        ],
        "specifier": "_1test_2nested",
      },
    ],
    "chunkName": "1test",
    "component": "@/pages/1test.vue",
    "name": "1test",
    "path": "/1test",
    "pathSegments": Array [
      "1test",
    ],
    "specifier": "_1test",
  },
]
`;

exports[`Route resolution resolves routes 1`] = `
Array [
  Object {
    "chunkName": "index",
    "component": "@/pages/index.vue",
    "name": "index",
    "path": "/",
    "pathSegments": Array [],
    "specifier": "index",
  },
  Object {
    "chunkName": "foo",
    "component": "@/pages/foo.vue",
    "name": "foo",
    "path": "/foo",
    "pathSegments": Array [
      "foo",
    ],
    "specifier": "foo",
  },
  Object {
    "chunkName": "baz",
    "component": "@/pages/baz.vue",
    "name": "baz",
    "path": "/baz",
    "pathSegments": Array [
      "baz",
    ],
    "specifier": "baz",
  },
]
`;

exports[`Route resolution resolves spase nested routes 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "chunkName": "users-session-login",
        "component": "@/pages/users/session/login.vue",
        "name": "users-session-login",
        "path": "session/login",
        "pathSegments": Array [
          "users",
          "session",
          "login",
        ],
        "specifier": "users_session_login",
      },
    ],
    "chunkName": "users",
    "component": "@/pages/users.vue",
    "name": "users",
    "path": "/users",
    "pathSegments": Array [
      "users",
    ],
    "specifier": "users",
  },
]
`;

exports[`Route resolution sorting handles when a dynamic route is a directory 1`] = `
Array [
  Object {
    "chunkName": "nested-foo",
    "component": "@/pages/nested/foo.vue",
    "name": "nested-foo",
    "path": "/nested/foo",
    "pathSegments": Array [
      "nested",
      "foo",
    ],
    "specifier": "nested_foo",
  },
  Object {
    "chunkName": "nested-id-foo",
    "component": "@/pages/nested/_id/foo.vue",
    "name": "nested-id-foo",
    "path": "/nested/:id/foo",
    "pathSegments": Array [
      "nested",
      ":id",
      "foo",
    ],
    "specifier": "nested__id_foo",
  },
]
`;

exports[`Route resolution sorting handles when a static route is a directory 1`] = `
Array [
  Object {
    "chunkName": "nested-foo-bar",
    "component": "@/pages/nested/foo/bar.vue",
    "name": "nested-foo-bar",
    "path": "/nested/foo/bar",
    "pathSegments": Array [
      "nested",
      "foo",
      "bar",
    ],
    "specifier": "nested_foo_bar",
  },
  Object {
    "chunkName": "nested-id",
    "component": "@/pages/nested/_id.vue",
    "name": "nested-id",
    "path": "/nested/:id?",
    "pathSegments": Array [
      "nested",
      ":id?",
    ],
    "specifier": "nested__id",
  },
]
`;

exports[`Route resolution sorting handles when both static and dynamic routes are directories 1`] = `
Array [
  Object {
    "chunkName": "nested-static-foo",
    "component": "@/pages/nested/static/foo.vue",
    "name": "nested-static-foo",
    "path": "/nested/static/foo",
    "pathSegments": Array [
      "nested",
      "static",
      "foo",
    ],
    "specifier": "nested_static_foo",
  },
  Object {
    "chunkName": "nested-id-foo",
    "component": "@/pages/nested/_id/foo.vue",
    "name": "nested-id-foo",
    "path": "/nested/:id/foo",
    "pathSegments": Array [
      "nested",
      ":id",
      "foo",
    ],
    "specifier": "nested__id_foo",
  },
]
`;

exports[`Route resolution sorting prioritizes deeper routes 1`] = `
Array [
  Object {
    "chunkName": "nested-test-foo-bar",
    "component": "@/pages/nested/test/foo/bar.vue",
    "name": "nested-test-foo-bar",
    "path": "/nested/test/foo/bar",
    "pathSegments": Array [
      "nested",
      "test",
      "foo",
      "bar",
    ],
    "specifier": "nested_test_foo_bar",
  },
  Object {
    "chunkName": "nested-test-foo-id",
    "component": "@/pages/nested/test/foo/_id.vue",
    "name": "nested-test-foo-id",
    "path": "/nested/test/foo/:id?",
    "pathSegments": Array [
      "nested",
      "test",
      "foo",
      ":id?",
    ],
    "specifier": "nested_test_foo__id",
  },
  Object {
    "chunkName": "nested-id-foo-bar",
    "component": "@/pages/nested/_id/foo/bar.vue",
    "name": "nested-id-foo-bar",
    "path": "/nested/:id/foo/bar",
    "pathSegments": Array [
      "nested",
      ":id",
      "foo",
      "bar",
    ],
    "specifier": "nested__id_foo_bar",
  },
  Object {
    "chunkName": "nested-id-key-bar",
    "component": "@/pages/nested/_id/_key/bar.vue",
    "name": "nested-id-key-bar",
    "path": "/nested/:id/:key/bar",
    "pathSegments": Array [
      "nested",
      ":id",
      ":key",
      "bar",
    ],
    "specifier": "nested__id__key_bar",
  },
]
`;

exports[`Route resolution sorting prioritizes static routes than dynamic ones 1`] = `
Array [
  Object {
    "chunkName": "nested-foo",
    "component": "@/pages/nested/foo.vue",
    "name": "nested-foo",
    "path": "/nested/foo",
    "pathSegments": Array [
      "nested",
      "foo",
    ],
    "specifier": "nested_foo",
  },
  Object {
    "chunkName": "nested-bar",
    "component": "@/pages/nested/bar.vue",
    "name": "nested-bar",
    "path": "/nested/bar",
    "pathSegments": Array [
      "nested",
      "bar",
    ],
    "specifier": "nested_bar",
  },
  Object {
    "chunkName": "nested-id",
    "component": "@/pages/nested/_id.vue",
    "name": "nested-id",
    "path": "/nested/:id?",
    "pathSegments": Array [
      "nested",
      ":id?",
    ],
    "specifier": "nested__id",
  },
]
`;
